Actions
Bug #7756
closeddis can't handle x86 SSE 3 instructions
Start date:
2017-01-09
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Intel added several instructions to SSE 3 which dis can't handle. These include:
- addsubpd
- addsubps
- fisttp
- fisttpl
- fisttpll
- haddpd
- haddps
- hsubpd
- hsubps
- lddqu
- movddup
- movshdup
- movsldup
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
git commit d4c899ee65547db6d0866332c5ef4c59cae9c2c2
commit d4c899ee65547db6d0866332c5ef4c59cae9c2c2 Author: Robert Mustacchi <rm@joyent.com> Date: 2017-01-28T22:55:59.000Z 7756 dis can't handle x86 SSE 3 instructions 7757 want avx2 disasm tests 7758 want SSE 4.1 disasm tests Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions